--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "EditAPI"
+name = "video-editor-api"
 version = "0.1.0"
 requires-python = ">=3.11"
 dependencies = [
@@ -16,8 +16,17 @@ dependencies = [
   "passlib[bcrypt]>=1.7.4",
 ]
 
-[tool.uv]
-dev-dependencies = ["pytest", "ruff", "mypy", "anyio"]
+[build-system]
+requires = ["hatchling"]
+build-backend = "hatchling.build"
+
+[tool.hatch.build.targets.wheel]
+packages = ["app"]
+
+[project.scripts]
+video-editor-api = "app.main:main"
+
+[tool.uv.dependency-groups]
 
 [tool.ruff]
 line-length = 100
